# LearnFugue

./: README.md
first-fugue/: Makefile  pyproject.toml
first-fugue/src/first_fugue/: first.py
